Even more polishing